--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@graphql-codegen/typescript-react-apollo": "^2.2.3",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
   }
 }
