--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -1,11 +1,23 @@
 schema: https://api.kulturspektakel.de/graphql
-documents: ./pages/**/*.tsx
+documents:
+  - ./pages/**/*.tsx
+  - ./components/**/*.tsx
 generates:
   ./types/graphql.ts:
     plugins:
       - typescript
       - typescript-operations
       - typescript-react-apollo
+  ./types/graphql.schema.json:
+    plugins:
+      - introspection
+    config:
+      minify: true
+config:
+  withMutationFn: true
+  scalars:
+    Date: Date
+    DateTime: Date
 hooks:
   afterOneFileWrite:
     - prettier --write
