--- a/package.json
+++ b/package.json
@@ -3,26 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev & yarn graphql",
+    "dev": "concurrently \"next dev\" \"yarn graphql\"",
     "build": "next build",
     "start": "next start",
     "graphql": "graphql-codegen --config ./.graphqlrc.yml --watch"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@apollo/client": "^3.3.13",
     "@apollo/react-ssr": "^4.0.0",
     "antd": "^4.15.0",
+    "apollo-link-scalars": "^2.1.3",
+    "classnames": "^2.3.1",
+    "date-fns": "^2.21.1",
     "graphql": "^15.5.0",
+    "graphql-scalars": "^1.9.3",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.3",
+    "@graphql-codegen/introspection": "^1.18.2",
     "@graphql-codegen/typescript-operations": "^1.17.15",
     "@graphql-codegen/typescript-react-apollo": "^2.2.3",
+    "@types/classnames": "^2.3.1",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "concurrently": "^6.0.2",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   }
