--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "@ant-design/icons": "^4.6.2",
     "@apollo/client": "^3.3.13",
     "@apollo/react-ssr": "^4.0.0",
+    "@types/emoji-mart": "^3.0.5",
+    "@types/react-beautiful-dnd": "^13.1.1",
     "antd": "^4.15.0",
     "apollo-link-scalars": "^2.1.3",
     "classnames": "^2.3.1",
     "date-fns": "^2.21.1",
+    "emoji-mart": "^3.0.1",
     "graphql": "^15.5.0",
     "graphql-scalars": "^1.9.3",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "17.0.1",
+    "react-use": "^17.2.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.3",
