--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "emoji-mart": "^3.0.1",
     "graphql": "^15.5.0",
     "graphql-scalars": "^1.9.3",
+    "lodash.memoize": "^4.1.2",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-beautiful-dnd": "^13.1.0",
