--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql-scalars": "^1.9.3",
     "lodash.memoize": "^4.1.2",
     "next": "10.0.5",
+    "print-js": "^1.6.0",
     "react": "17.0.1",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.1",
