--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "17.0.1",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.1",
-    "react-use": "^17.2.4"
+    "react-use": "^17.2.4",
+    "react-virtualized-auto-sizer": "^1.0.6"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.3",
@@ -37,6 +38,7 @@
     "@types/classnames": "^2.3.1",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
     "concurrently": "^6.0.2",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
