--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -2,6 +2,7 @@ schema: https://api.kulturspektakel.de/graphql
 documents:
   - ./pages/**/*.tsx
   - ./components/**/*.tsx
+  - ./utils/**/*.ts
 generates:
   ./types/graphql.ts:
     plugins:
