--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@ant-design/charts": "^1.2.5",
     "@ant-design/icons": "^4.6.2",
-    "@apollo/client": "^3.3.13",
+    "@apollo/client": "^3.4.8",
     "@apollo/react-ssr": "^4.0.0",
     "@types/emoji-mart": "^3.0.5",
     "@types/react-beautiful-dnd": "^13.1.1",
     "antd": "^4.15.0",
-    "apollo-link-scalars": "^2.1.3",
+    "apollo-link-scalars": "^2.1.4",
     "classnames": "^2.3.1",
     "date-fns": "^2.21.1",
     "emoji-mart": "^3.0.1",
@@ -24,6 +24,7 @@
     "graphql-scalars": "^1.9.3",
     "lodash.memoize": "^4.1.2",
     "next": "10.0.5",
+    "next-absolute-url": "^1.2.2",
     "react": "17.0.1",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.1",
