--- a/package.json
+++ b/package.json
@@ -9,39 +9,40 @@
     "graphql": "graphql-codegen --config ./.graphqlrc.yml --watch"
   },
   "dependencies": {
-    "@ant-design/charts": "^1.2.14",
+    "@ant-design/charts": "^1.3.4",
     "@ant-design/icons": "^4.7.0",
-    "@apollo/client": "^3.4.16",
+    "@apollo/client": "^3.5.7",
     "@apollo/react-ssr": "^4.0.0",
-    "@types/emoji-mart": "^3.0.8",
+    "@types/emoji-mart": "^3.0.9",
     "@types/react-beautiful-dnd": "^13.1.2",
-    "antd": "^4.16.13",
-    "apollo-link-scalars": "^3.0.0",
+    "antd": "^4.18.3",
+    "apollo-link-scalars": "^4.0.0",
     "classnames": "^2.3.1",
-    "date-fns": "^2.25.0",
+    "date-fns": "^2.28.0",
     "emoji-mart": "^3.0.1",
-    "graphql": "^16.0.0",
-    "graphql-scalars": "^1.12.0",
+    "graphql": "^16.2.0",
+    "graphql-scalars": "^1.14.1",
     "lodash.memoize": "^4.1.2",
-    "next": "12.0.1",
+    "next": "12.0.8",
     "next-absolute-url": "^1.2.2",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
-    "react-use": "^17.3.1",
+    "react-markdown": "^7.1.2",
+    "react-use": "^17.3.2",
     "react-virtualized-auto-sizer": "^1.0.6"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.2.2",
-    "@graphql-codegen/introspection": "^2.1.0",
-    "@graphql-codegen/typescript-operations": "^2.2.0",
-    "@graphql-codegen/typescript-react-apollo": "^3.2.0",
+    "@graphql-codegen/cli": "^2.3.1",
+    "@graphql-codegen/introspection": "^2.1.1",
+    "@graphql-codegen/typescript-operations": "^2.2.2",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.4",
     "@types/classnames": "^2.3.1",
-    "@types/node": "^16.11.6",
-    "@types/react": "^17.0.33",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "concurrently": "^6.3.0",
-    "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
+    "concurrently": "^7.0.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
   }
 }
