--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
+    "react-markdown": "^8.0.0",
     "react-use": "^17.3.2",
-    "react-virtualized-auto-sizer": "^1.0.6"
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.6.2",
