--- a/package.json
+++ b/package.json
@@ -13,21 +13,22 @@
     "@ant-design/icons": "^4.7.0",
     "@apollo/client": "^3.6.2",
     "@apollo/react-ssr": "^4.0.0",
-    "@types/emoji-mart": "^3.0.9",
+    "@emoji-mart/data": "^1.0.1",
     "@types/react-beautiful-dnd": "^13.1.2",
-    "antd": "^4.20.2",
+    "antd": "^4.20.5",
     "apollo-link-scalars": "^4.0.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "emoji-mart": "^5.0.0",
+    "emoji-picker-react": "^3.5.1",
     "graphql": "^16.4.0",
     "graphql-scalars": "^1.17.0",
     "lodash.memoize": "^4.1.2",
-    "next": "12.1.6",
+    "next": "11",
     "next-absolute-url": "^1.2.2",
-    "react": "18.1.0",
+    "react": "17",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "18.1.0",
+    "react-dom": "17",
     "react-markdown": "^8.0.3",
     "react-use": "^17.3.2",
     "react-virtualized-auto-sizer": "^1.0.6",
@@ -40,7 +41,6 @@
     "@graphql-codegen/typescript-react-apollo": "^3.2.13",
     "@types/classnames": "^2.3.1",
     "@types/node": "^17.0.31",
-    "@types/react": "^18.0.9",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "concurrently": "^7.1.0",
     "prettier": "^2.6.2",
