--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/charts": "^1.3.6",
     "@ant-design/icons": "^4.7.0",
+    "@ant-design/plots": "^1.0.9",
     "@apollo/client": "^3.6.2",
     "@apollo/react-ssr": "^4.0.0",
     "@emoji-mart/data": "^1.0.1",
