--- a/package.json
+++ b/package.json
@@ -9,42 +9,43 @@
     "graphql": "graphql-codegen --config ./.graphqlrc.yml --watch"
   },
   "dependencies": {
-    "@ant-design/charts": "^1.3.6",
+    "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^4.7.0",
-    "@ant-design/plots": "^1.0.9",
-    "@apollo/client": "^3.6.2",
+    "@ant-design/plots": "^1.2.1",
+    "@apollo/client": "^3.6.9",
     "@apollo/react-ssr": "^4.0.0",
-    "@emoji-mart/data": "^1.0.1",
+    "@emoji-mart/data": "^1.0.5",
     "@types/react-beautiful-dnd": "^13.1.2",
-    "antd": "^4.20.5",
+    "antd": "^4.23.0",
     "apollo-link-scalars": "^4.0.1",
     "classnames": "^2.3.1",
-    "date-fns": "^2.28.0",
-    "emoji-mart": "^5.0.0",
-    "emoji-picker-react": "^3.5.1",
-    "graphql": "^16.4.0",
-    "graphql-scalars": "^1.17.0",
+    "date-fns": "^2.29.2",
+    "emoji-mart": "^5.2.1",
+    "emoji-picker-react": "^3.6.1",
+    "graphql": "^16.6.0",
+    "graphql-scalars": "^1.18.0",
     "lodash.memoize": "^4.1.2",
-    "next": "11",
+    "next": "12.2.5",
     "next-absolute-url": "^1.2.2",
     "react": "17",
-    "react-beautiful-dnd": "^13.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "17",
     "react-markdown": "^8.0.3",
-    "react-use": "^17.3.2",
+    "react-use": "^17.4.0",
     "react-virtualized-auto-sizer": "^1.0.6",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/introspection": "^2.1.1",
-    "@graphql-codegen/typescript-operations": "^2.3.7",
-    "@graphql-codegen/typescript-react-apollo": "^3.2.13",
+    "@graphql-codegen/cli": "^2.12.0",
+    "@graphql-codegen/introspection": "^2.2.1",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.3",
     "@types/classnames": "^2.3.1",
-    "@types/node": "^17.0.31",
+    "@types/emoji-mart": "^3.0.9",
+    "@types/node": "^18.7.14",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "concurrently": "^7.1.0",
-    "prettier": "^2.6.2",
-    "typescript": "^4.6.4"
+    "concurrently": "^7.3.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.2"
   }
 }
