--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^4.7.0",
-    "@ant-design/plots": "^1.2.1",
-    "@apollo/client": "^3.6.9",
+    "@ant-design/plots": "^1.2.2",
+    "@apollo/client": "^3.7.1",
     "@apollo/react-ssr": "^4.0.0",
-    "@emoji-mart/data": "^1.0.5",
+    "@emoji-mart/data": "^1.0.6",
     "@types/react-beautiful-dnd": "^13.1.2",
-    "antd": "^4.23.0",
+    "antd": "^4.24.1",
     "apollo-link-scalars": "^4.0.1",
-    "classnames": "^2.3.1",
-    "date-fns": "^2.29.2",
-    "emoji-mart": "^5.2.1",
-    "emoji-picker-react": "^3.6.1",
+    "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
+    "emoji-mart": "^5.2.2",
     "graphql": "^16.6.0",
-    "graphql-scalars": "^1.18.0",
+    "graphql-scalars": "^1.20.0",
     "lodash.memoize": "^4.1.2",
     "next": "12.2.5",
     "next-absolute-url": "^1.2.2",
@@ -32,20 +31,20 @@
     "react-dom": "17",
     "react-markdown": "^8.0.3",
     "react-use": "^17.4.0",
-    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-virtualized-auto-sizer": "^1.0.7",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.12.0",
+    "@graphql-codegen/cli": "2.13.9",
     "@graphql-codegen/introspection": "^2.2.1",
-    "@graphql-codegen/typescript-operations": "^2.5.3",
-    "@graphql-codegen/typescript-react-apollo": "^3.3.3",
+    "@graphql-codegen/typescript-operations": "^2.5.6",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.6",
     "@types/classnames": "^2.3.1",
     "@types/emoji-mart": "^3.0.9",
-    "@types/node": "^18.7.14",
+    "@types/node": "^18.11.9",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "concurrently": "^7.3.0",
+    "concurrently": "^7.5.0",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.4"
   }
 }
