--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@apollo/react-ssr": "^4.0.0",
     "@emoji-mart/data": "^1.0.6",
     "@types/react-beautiful-dnd": "^13.1.2",
-    "antd": "^4.24.1",
+    "antd": "^5.0.0-alpha.34",
     "apollo-link-scalars": "^4.0.1",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.6",
     "emoji-mart": "^5.2.2",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.0",
