--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextjs",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "concurrently \"next dev\" \"yarn graphql\"",
     "build": "next build",
@@ -25,8 +26,11 @@
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.0",
     "lodash.memoize": "^4.1.2",
-    "next": "12.2.5",
+    "next": "12",
     "next-absolute-url": "^1.2.2",
+    "rc-picker": "^2.7.0",
+    "rc-select": "^14.1.13",
+    "rc-util": "^5.24.4",
     "react": "17",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "17",
