--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@apollo/react-ssr": "^4.0.0",
     "@emoji-mart/data": "^1.0.6",
     "@types/react-beautiful-dnd": "^13.1.2",
-    "antd": "^5.0.0-alpha.34",
+    "antd": "^5.0.0-beta.0",
     "apollo-link-scalars": "^4.0.1",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
@@ -30,10 +30,11 @@
     "next-absolute-url": "^1.2.2",
     "rc-picker": "^2.7.0",
     "rc-select": "^14.1.13",
+    "rc-trigger": "^5.3.3",
     "rc-util": "^5.24.4",
-    "react": "17",
+    "react": "18",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "17",
+    "react-dom": "18",
     "react-markdown": "^8.0.3",
     "react-use": "^17.4.0",
     "react-virtualized-auto-sizer": "^1.0.7",
