--- a/package.json
+++ b/package.json
@@ -6,45 +6,47 @@
     "dev": "concurrently \"next dev\" \"yarn graphql\"",
     "build": "next build",
     "start": "next start",
-    "graphql": "graphql-codegen --config ./.graphqlrc.yml --watch"
+    "graphql": "graphql-codegen --config ./.graphqlrc.yml --watch",
+    "lint": "next lint"
   },
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
-    "@ant-design/icons": "^4.7.0",
-    "@ant-design/plots": "^1.2.2",
-    "@apollo/client": "^3.7.1",
+    "@ant-design/icons": "^4.8.0",
+    "@ant-design/plots": "^1.2.3",
+    "@apollo/client": "^3.7.3",
     "@apollo/react-ssr": "^4.0.0",
-    "@emoji-mart/data": "^1.0.6",
-    "@types/react-beautiful-dnd": "^13.1.2",
-    "antd": "^4.24.1",
+    "@emoji-mart/data": "^1.1.1",
+    "@types/react-beautiful-dnd": "^13.1.3",
+    "antd": "5",
     "apollo-link-scalars": "^4.0.1",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
-    "emoji-mart": "^5.2.2",
+    "dayjs": "^1.11.7",
+    "emoji-mart": "^5.4.0",
+    "eslint": "^8.31.0",
+    "eslint-config-next": "^13.1.1",
     "graphql": "^16.6.0",
-    "graphql-scalars": "^1.20.0",
+    "graphql-scalars": "^1.20.1",
     "lodash.memoize": "^4.1.2",
-    "next": "12.2.5",
+    "next": "^13.1.1",
     "next-absolute-url": "^1.2.2",
-    "react": "17",
+    "react": "18",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "17",
-    "react-markdown": "^8.0.3",
+    "react-dom": "18",
     "react-use": "^17.4.0",
-    "react-virtualized-auto-sizer": "^1.0.7",
-    "remark-gfm": "^3.0.1"
+    "react-virtualized-auto-sizer": "^1.0.7"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.13.9",
-    "@graphql-codegen/introspection": "^2.2.1",
-    "@graphql-codegen/typescript-operations": "^2.5.6",
-    "@graphql-codegen/typescript-react-apollo": "^3.3.6",
+    "@graphql-codegen/cli": "2.16.3",
+    "@graphql-codegen/introspection": "^2.2.3",
+    "@graphql-codegen/typescript-operations": "^2.5.12",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/classnames": "^2.3.1",
     "@types/emoji-mart": "^3.0.9",
-    "@types/node": "^18.11.9",
+    "@types/node": "^18.11.18",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "concurrently": "^7.5.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
+    "concurrently": "^7.6.0",
+    "prettier": "^2.8.2",
+    "typescript": "^4.9.4"
   }
 }
