--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextjs",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "concurrently \"next dev\" \"yarn graphql\"",
     "build": "next build",
