--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@apollo/client": "^3.7.3",
     "@apollo/react-ssr": "^4.0.0",
     "@emoji-mart/data": "^1.1.1",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@types/react-beautiful-dnd": "^13.1.3",
     "antd": "5",
     "apollo-link-scalars": "^4.0.1",
@@ -44,6 +45,7 @@
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/classnames": "^2.3.1",
     "@types/emoji-mart": "^3.0.9",
+    "@types/google.maps": "^3.51.0",
     "@types/node": "^18.11.18",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "concurrently": "^7.6.0",
