--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
   },
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
-    "@ant-design/icons": "^4.8.0",
-    "@ant-design/plots": "^1.2.3",
-    "@apollo/client": "^3.7.3",
+    "@ant-design/icons": "^5.0.1",
+    "@ant-design/plots": "^1.2.4",
+    "@apollo/client": "^3.7.4",
     "@apollo/react-ssr": "^4.0.0",
-    "@emoji-mart/data": "^1.1.1",
+    "@emoji-mart/data": "^1.1.2",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@types/react-beautiful-dnd": "^13.1.3",
-    "antd": "5",
+    "antd": "5.1.6",
     "apollo-link-scalars": "^4.0.1",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
-    "emoji-mart": "^5.4.0",
-    "eslint": "^8.31.0",
-    "eslint-config-next": "^13.1.1",
+    "emoji-mart": "^5.5.1",
+    "eslint": "^8.32.0",
+    "eslint-config-next": "^13.1.4",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
     "lodash.memoize": "^4.1.2",
-    "next": "^13.1.1",
+    "next": "^13.1.4",
     "next-absolute-url": "^1.2.2",
     "react": "18",
     "react-beautiful-dnd": "^13.1.1",
@@ -39,7 +39,7 @@
     "react-virtualized-auto-sizer": "^1.0.7"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.16.3",
+    "@graphql-codegen/cli": "2.16.4",
     "@graphql-codegen/introspection": "^2.2.3",
     "@graphql-codegen/typescript-operations": "^2.5.12",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
@@ -49,7 +49,8 @@
     "@types/node": "^18.11.18",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "concurrently": "^7.6.0",
-    "prettier": "^2.8.2",
+    "prettier": "^2.8.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
 }
