--- a/package.json
+++ b/package.json
@@ -12,45 +12,45 @@
   },
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
-    "@ant-design/icons": "^5.0.1",
+    "@ant-design/icons": "^5.1.3",
     "@ant-design/plots": "^1.2.5",
-    "@apollo/client": "^3.7.10",
+    "@apollo/client": "^3.7.14",
     "@apollo/react-ssr": "^4.0.0",
     "@emoji-mart/data": "^1.1.2",
     "@googlemaps/react-wrapper": "^1.1.35",
-    "@types/react-beautiful-dnd": "^13.1.3",
-    "antd": "5.3.1",
+    "@react-hook/resize-observer": "^1.2.6",
+    "@types/react-beautiful-dnd": "^13.1.4",
+    "antd": "5.5.1",
     "apollo-link-scalars": "^4.0.2",
     "classnames": "^2.3.2",
-    "date-fns": "^2.29.3",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
     "emoji-mart": "^5.5.2",
-    "eslint": "^8.36.0",
-    "eslint-config-next": "^13.2.4",
+    "eslint": "^8.41.0",
+    "eslint-config-next": "^13.4.4",
     "graphql": "^16.6.0",
-    "graphql-scalars": "^1.20.4",
+    "graphql-scalars": "^1.22.0",
+    "jwt-decode": "^3.1.2",
     "lodash.memoize": "^4.1.2",
-    "next": "^13.2.4",
+    "next": "^13.4.4",
     "next-absolute-url": "^1.2.2",
     "react": "18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18",
-    "react-use": "^17.4.0",
-    "react-virtualized-auto-sizer": "^1.0.7"
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "3.2.2",
-    "@graphql-codegen/introspection": "^3.0.1",
-    "@graphql-codegen/typescript-operations": "^3.0.2",
+    "@graphql-codegen/cli": "4.0.0",
+    "@graphql-codegen/introspection": "^4.0.0",
+    "@graphql-codegen/typescript-operations": "^4.0.0",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/classnames": "^2.3.1",
     "@types/emoji-mart": "^3.0.9",
-    "@types/google.maps": "^3.52.2",
-    "@types/node": "^18.15.2",
-    "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "concurrently": "^7.6.0",
-    "prettier": "^2.8.4",
+    "@types/google.maps": "^3.53.2",
+    "@types/node": "^20.2.5",
+    "concurrently": "^8.0.1",
+    "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.4"
   }
 }
