--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^5.1.3",
     "@ant-design/plots": "^1.2.5",
-    "@apollo/client": "^3.7.14",
-    "@apollo/react-ssr": "^4.0.0",
+    "@apollo/client": "^3.8.0-beta.0",
     "@emoji-mart/data": "^1.1.2",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@react-hook/resize-observer": "^1.2.6",
