--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash.memoize": "^4.1.2",
     "next": "^13.4.6",
     "next-absolute-url": "^1.2.2",
+    "rc-picker": "^3.8.2",
     "react": "18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18",
