--- a/package.json
+++ b/package.json
@@ -12,45 +12,46 @@
   },
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
-    "@ant-design/icons": "^5.1.4",
+    "@ant-design/icons": "^5.2.6",
     "@ant-design/plots": "^1.2.5",
-    "@apollo/client": "^3.8.0-beta.5",
+    "@apollo/client": "^3.8.4",
     "@emoji-mart/data": "^1.1.2",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@react-hook/resize-observer": "^1.2.6",
-    "@types/react-beautiful-dnd": "^13.1.4",
-    "antd": "5.6.4",
+    "@types/react-beautiful-dnd": "^13.1.5",
+    "antd": "5.9.3",
     "apollo-link-scalars": "^4.0.2",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
-    "dayjs": "^1.11.9",
+    "dayjs": "^1.11.10",
     "emoji-mart": "^5.5.2",
     "eslint": "^8.44.0",
-    "eslint-config-next": "^13.4.9",
-    "graphql": "^16.7.1",
+    "eslint-config-next": "^13.5.3",
+    "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.2",
     "jwt-decode": "^3.1.2",
     "lodash.memoize": "^4.1.2",
-    "next": "^13.4.9",
+    "next": "^13.5.3",
     "next-absolute-url": "^1.2.2",
-    "rc-picker": "^3.10.0",
+    "rc-picker": "^3.14.4",
     "react": "18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18",
     "react-use": "^17.4.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "4.0.1",
+    "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/introspection": "^4.0.0",
     "@graphql-codegen/typescript-operations": "^4.0.1",
-    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@graphql-codegen/typescript-react-apollo": "^4.0.0",
+    "@parcel/watcher": "^2.3.0",
     "@types/classnames": "^2.3.1",
-    "@types/emoji-mart": "^3.0.9",
-    "@types/google.maps": "^3.53.4",
-    "@types/node": "^20.4.1",
-    "concurrently": "^8.2.0",
-    "prettier": "^3.0.0",
+    "@types/emoji-mart": "^3.0.10",
+    "@types/google.maps": "^3.54.1",
+    "@types/node": "^20.7.0",
+    "concurrently": "^8.2.1",
+    "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   }
 }
