fix rating mutation

--- a/package.json
+++ b/package.json
@@ -14,26 +14,27 @@
     "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^5.2.6",
     "@ant-design/plots": "^1.2.5",
-    "@apollo/client": "^3.8.4",
+    "@apollo/client": "^3.8.6",
     "@emoji-mart/data": "^1.1.2",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@react-hook/resize-observer": "^1.2.6",
     "@types/react-beautiful-dnd": "^13.1.5",
-    "antd": "5.9.3",
+    "antd": "5.10.1",
     "apollo-link-scalars": "^4.0.2",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "emoji-mart": "^5.5.2",
-    "eslint": "^8.44.0",
-    "eslint-config-next": "^13.5.3",
+    "eslint": "^8.51.0",
+    "eslint-config-next": "^13.5.5",
     "graphql": "^16.8.1",
-    "graphql-scalars": "^1.22.2",
+    "graphql-scalars": "^1.22.4",
     "jwt-decode": "^3.1.2",
     "lodash.memoize": "^4.1.2",
-    "next": "^13.5.3",
+    "next": "^13.5.5",
     "next-absolute-url": "^1.2.2",
-    "rc-picker": "^3.14.4",
+    "rc-picker": "^3.14.5",
+    "rc-util": "^5.38.0",
     "react": "18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18",
@@ -47,8 +48,8 @@
     "@parcel/watcher": "^2.3.0",
     "@types/classnames": "^2.3.1",
     "@types/emoji-mart": "^3.0.10",
-    "@types/google.maps": "^3.54.1",
-    "@types/node": "^20.7.0",
+    "@types/google.maps": "^3.54.3",
+    "@types/node": "^20.8.6",
     "concurrently": "^8.2.1",
     "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
