--- a/package.json
+++ b/package.json
@@ -11,48 +11,51 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/charts": "^1.4.2",
-    "@ant-design/icons": "^5.2.6",
-    "@ant-design/plots": "^1.2.5",
-    "@apollo/client": "^3.8.7",
-    "@emoji-mart/data": "^1.1.2",
-    "@googlemaps/react-wrapper": "^1.1.35",
-    "@react-hook/resize-observer": "^1.2.6",
-    "@types/react-beautiful-dnd": "^13.1.7",
-    "antd": "5.11.3",
-    "apollo-link-scalars": "^4.0.2",
-    "classnames": "^2.3.2",
-    "date-fns": "^2.30.0",
-    "dayjs": "^1.11.10",
-    "emoji-mart": "^5.5.2",
-    "eslint": "^8.54.0",
-    "eslint-config-next": "^13.5.5",
-    "graphql": "^16.8.1",
-    "graphql-scalars": "^1.22.4",
-    "jwt-decode": "^3.1.2",
+    "@ant-design/charts": "^2.2.1",
+    "@ant-design/icons": "^5.4.0",
+    "@ant-design/plots": "^2.3.2",
+    "@apollo/client": "^3.11.8",
+    "@emoji-mart/data": "^1.2.1",
+    "@googlemaps/react-wrapper": "^1.1.42",
+    "@react-hook/resize-observer": "^2.0.2",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "antd": "5.20.6",
+    "apollo-link-scalars": "^4.0.3",
+    "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
+    "emoji-mart": "^5.6.0",
+    "eslint": "^9.10.0",
+    "eslint-config-next": "^14.2.12",
+    "graphql": "^16.9.0",
+    "graphql-scalars": "^1.23.0",
+    "jwt-decode": "^4.0.0",
     "lodash.memoize": "^4.1.2",
-    "next": "^13.5.5",
+    "next": "14.0.2",
     "next-absolute-url": "^1.2.2",
-    "rc-picker": "^3.14.6",
-    "rc-util": "^5.38.1",
-    "react": "18",
+    "rc-picker": "^4.6.14",
+    "rc-util": "^5.43.0",
+    "react": "18.3.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "18",
-    "react-use": "^17.4.0"
+    "react-dom": "18.3.1",
+    "react-use": "^17.5.1"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/introspection": "^4.0.0",
-    "@graphql-codegen/typescript-operations": "^4.0.1",
-    "@graphql-codegen/typescript-react-apollo": "^4.1.0",
-    "@parcel/watcher": "^2.3.0",
+    "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/introspection": "^4.0.3",
+    "@graphql-codegen/typescript-operations": "^4.2.3",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
+    "@parcel/watcher": "^2.4.1",
     "@types/classnames": "^2.3.1",
-    "@types/emoji-mart": "^3.0.13",
-    "@types/google.maps": "^3.54.9",
-    "@types/node": "^20.9.4",
-    "concurrently": "^8.2.2",
-    "prettier": "^3.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "@types/emoji-mart": "^3.0.14",
+    "@types/google.maps": "^3.58.0",
+    "@types/node": "^22.5.5",
+    "concurrently": "^9.0.1",
+    "prettier": "^3.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
+  },
+  "resolutions": {
+    "jackspeak": "2.1.1"
   }
 }
